src/BNFC/UTP/Par.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from UTP/Par.y
-----------------------------------------------------------------------------

state 11 contains 4 reduce/reduce conflicts.
state 21 contains 10 reduce/reduce conflicts.
state 95 contains 2 reduce/reduce conflicts.

rule 43 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pTheory -> Theory                           (0)
	%start_pTerm -> Term                               (1)
	%start_pType -> Type                               (2)
	%start_pSCond -> SCond                             (3)
	Integer -> L_integ                                 (4)
	DynVar -> L_DynVar                                 (5)
	Theory -> 'Theory' DynVar '.' ListDynVar '.' ListItem   (6)
	ListDynVar ->                                      (7)
	ListDynVar -> DynVar ListDynVar                    (8)
	Item -> 'DclVar' VarClass DynVar '.' VarRole '.'   (9)
	Item -> 'DclDLVar' VarClass DynVar '.' ListDynVar '.'   (10)
	Item -> 'DclASet' VarClass DynVar '.'              (11)
	Item -> 'Conjecture' DynVar '.' Term '.' SCond     (12)
	Item -> 'Law' LawType DynVar '.' Term '.' SCond    (13)
	VarRole -> 'var' SBBL Type                         (14)
	VarClass -> 'Obs'                                  (15)
	VarClass -> 'Exp'                                  (16)
	VarClass -> 'Prd'                                  (17)
	SBBL -> 'NA'                                       (18)
	SBBL -> 'SB'                                       (19)
	SBBL -> 'NS'                                       (20)
	LawType -> 'axiom'                                 (21)
	LawType -> 'proven'                                (22)
	LawType -> 'assumed'                               (23)
	ListItem ->                                        (24)
	ListItem -> Item ListItem                          (25)
	Term -> Term '===' Term1                           (26)
	Term -> Term1                                      (27)
	Term1 -> Term2 '==>' Term1                         (28)
	Term1 -> Term2                                     (29)
	Term2 -> Term2 '\\/' Term3                         (30)
	Term2 -> Term3                                     (31)
	Term3 -> Term3 '/\\' Term4                         (32)
	Term3 -> '~' Term4                                 (33)
	Term3 -> Term4                                     (34)
	Term4 -> Term5 '==' Term5                          (35)
	Term4 -> Term5 '!=' Term5                          (36)
	Term4 -> Term5 '<' Term5                           (37)
	Term4 -> Term5 '<=' Term5                          (38)
	Term4 -> Term5 '>' Term5                           (39)
	Term4 -> Term5 '>=' Term5                          (40)
	Term4 -> 'True'                                    (41)
	Term4 -> 'False'                                   (42)
	Term4 -> DynVar                                    (43)
	Term4 -> Term5                                     (44)
	Term5 -> Term6 '++' Term5                          (45)
	Term5 -> Term6 ':' Term5                           (46)
	Term5 -> Term6                                     (47)
	Term6 -> Term6 '+' Term7                           (48)
	Term6 -> Term6 '-' Term7                           (49)
	Term6 -> Term7                                     (50)
	Term7 -> Term7 '*' Term8                           (51)
	Term7 -> Term7 'div' Term8                         (52)
	Term7 -> Term7 'mod' Term8                         (53)
	Term7 -> 'neg' Term8                               (54)
	Term7 -> Term8                                     (55)
	Term8 -> Integer                                   (56)
	Term8 -> DynVar                                    (57)
	Term8 -> 'true'                                    (58)
	Term8 -> 'false'                                   (59)
	Term8 -> 'nil'                                     (60)
	Term8 -> DynVar '(' ListTerm ')'                   (61)
	Term8 -> 'SubV' Term '[.' ListTerm '/' ListDynVar '.]'   (62)
	Term8 -> 'SubL' Term '[.' ListDynVar '/' ListDynVar '.]'   (63)
	Term8 -> 'Sub' Term '[.' ListTerm '/' ListDynVar '|' ListDynVar '/' ListDynVar '.]'   (64)
	Term8 -> '(' Term ')'                              (65)
	ListTerm ->                                        (66)
	ListTerm -> Term                                   (67)
	ListTerm -> Term ',' ListTerm                      (68)
	Type -> Type1 '->' Type                            (69)
	Type -> Type1                                      (70)
	Type1 -> DynVar '(:' ListType2 ':)'                (71)
	Type1 -> Type2                                     (72)
	Type2 -> DynVar ListType3                          (73)
	Type2 -> Type3                                     (74)
	Type3 -> 'ttop'                                    (75)
	Type3 -> DynVar                                    (76)
	Type3 -> 'tbot'                                    (77)
	Type3 -> '(' Type ')'                              (78)
	ListType2 ->                                       (79)
	ListType2 -> Type2                                 (80)
	ListType2 -> Type2 '|' ListType2                   (81)
	ListType3 ->                                       (82)
	ListType3 -> Type3 ListType3                       (83)
	GVar -> 'std' DynVar                               (84)
	GVar -> 'lst' DynVar                               (85)
	ListGVar ->                                        (86)
	ListGVar -> GVar                                   (87)
	ListGVar -> GVar ',' ListGVar                      (88)
	VarSet -> ListGVar                                 (89)
	VSCond -> GVar 'disj' VarSet                       (90)
	VSCond -> GVar 'covby' VarSet                      (91)
	VSCond -> GVar 'dcovby' VarSet                     (92)
	ListVSCond ->                                      (93)
	ListVSCond -> VSCond                               (94)
	ListVSCond -> VSCond ';' ListVSCond                (95)
	SCond -> 'SC' ListVSCond '.' VarSet '.'            (96)
	SCond -> 'VSC' ListVSCond '.'                      (97)
	SCond -> 'fresh' VarSet '.'                        (98)
	SCond -> 'none'                                    (99)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!='           { PT _ (TS _ 1) }
	'('            { PT _ (TS _ 2) }
	'(:'           { PT _ (TS _ 3) }
	')'            { PT _ (TS _ 4) }
	'*'            { PT _ (TS _ 5) }
	'+'            { PT _ (TS _ 6) }
	'++'           { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'->'           { PT _ (TS _ 10) }
	'.'            { PT _ (TS _ 11) }
	'.]'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	'/\\'          { PT _ (TS _ 14) }
	':'            { PT _ (TS _ 15) }
	':)'           { PT _ (TS _ 16) }
	';'            { PT _ (TS _ 17) }
	'<'            { PT _ (TS _ 18) }
	'<='           { PT _ (TS _ 19) }
	'=='           { PT _ (TS _ 20) }
	'==='          { PT _ (TS _ 21) }
	'==>'          { PT _ (TS _ 22) }
	'>'            { PT _ (TS _ 23) }
	'>='           { PT _ (TS _ 24) }
	'Conjecture'   { PT _ (TS _ 25) }
	'DclASet'      { PT _ (TS _ 26) }
	'DclDLVar'     { PT _ (TS _ 27) }
	'DclVar'       { PT _ (TS _ 28) }
	'Exp'          { PT _ (TS _ 29) }
	'False'        { PT _ (TS _ 30) }
	'Law'          { PT _ (TS _ 31) }
	'NA'           { PT _ (TS _ 32) }
	'NS'           { PT _ (TS _ 33) }
	'Obs'          { PT _ (TS _ 34) }
	'Prd'          { PT _ (TS _ 35) }
	'SB'           { PT _ (TS _ 36) }
	'SC'           { PT _ (TS _ 37) }
	'Sub'          { PT _ (TS _ 38) }
	'SubL'         { PT _ (TS _ 39) }
	'SubV'         { PT _ (TS _ 40) }
	'Theory'       { PT _ (TS _ 41) }
	'True'         { PT _ (TS _ 42) }
	'VSC'          { PT _ (TS _ 43) }
	'[.'           { PT _ (TS _ 44) }
	'\\/'          { PT _ (TS _ 45) }
	'assumed'      { PT _ (TS _ 46) }
	'axiom'        { PT _ (TS _ 47) }
	'covby'        { PT _ (TS _ 48) }
	'dcovby'       { PT _ (TS _ 49) }
	'disj'         { PT _ (TS _ 50) }
	'div'          { PT _ (TS _ 51) }
	'false'        { PT _ (TS _ 52) }
	'fresh'        { PT _ (TS _ 53) }
	'lst'          { PT _ (TS _ 54) }
	'mod'          { PT _ (TS _ 55) }
	'neg'          { PT _ (TS _ 56) }
	'nil'          { PT _ (TS _ 57) }
	'none'         { PT _ (TS _ 58) }
	'proven'       { PT _ (TS _ 59) }
	'std'          { PT _ (TS _ 60) }
	'tbot'         { PT _ (TS _ 61) }
	'true'         { PT _ (TS _ 62) }
	'ttop'         { PT _ (TS _ 63) }
	'var'          { PT _ (TS _ 64) }
	'|'            { PT _ (TS _ 65) }
	'~'            { PT _ (TS _ 66) }
	L_integ        { PT _ (TI $$) }
	L_DynVar       { PT _ (T_DynVar $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pTheory  rule  0
	%start_pTerm    rule  1
	%start_pType    rule  2
	%start_pSCond   rule  3
	Integer         rule  4
	DynVar          rule  5
	Theory          rule  6
	ListDynVar      rules 7, 8
	Item            rules 9, 10, 11, 12, 13
	VarRole         rule  14
	VarClass        rules 15, 16, 17
	SBBL            rules 18, 19, 20
	LawType         rules 21, 22, 23
	ListItem        rules 24, 25
	Term            rules 26, 27
	Term1           rules 28, 29
	Term2           rules 30, 31
	Term3           rules 32, 33, 34
	Term4           rules 35, 36, 37, 38, 39, 40, 41, 42, 43, 44
	Term5           rules 45, 46, 47
	Term6           rules 48, 49, 50
	Term7           rules 51, 52, 53, 54, 55
	Term8           rules 56, 57, 58, 59, 60, 61, 62, 63, 64, 65
	ListTerm        rules 66, 67, 68
	Type            rules 69, 70
	Type1           rules 71, 72
	Type2           rules 73, 74
	Type3           rules 75, 76, 77, 78
	ListType2       rules 79, 80, 81
	ListType3       rules 82, 83
	GVar            rules 84, 85
	ListGVar        rules 86, 87, 88
	VarSet          rule  89
	VSCond          rules 90, 91, 92
	ListVSCond      rules 93, 94, 95
	SCond           rules 96, 97, 98, 99

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pTheory -> . Theory                          (rule 0)

	'Theory'       shift, and enter state 43

	Theory         goto state 42

State 1

	%start_pTerm -> . Term                              (rule 1)

	'('            shift, and enter state 31
	'False'        shift, and enter state 32
	'Sub'          shift, and enter state 33
	'SubL'         shift, and enter state 34
	'SubV'         shift, and enter state 35
	'True'         shift, and enter state 36
	'false'        shift, and enter state 37
	'neg'          shift, and enter state 38
	'nil'          shift, and enter state 39
	'true'         shift, and enter state 40
	'~'            shift, and enter state 41
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 19

	Integer        goto state 20
	DynVar         goto state 21
	Term           goto state 22
	Term1          goto state 23
	Term2          goto state 24
	Term3          goto state 25
	Term4          goto state 26
	Term5          goto state 27
	Term6          goto state 28
	Term7          goto state 29
	Term8          goto state 30

State 2

	%start_pType -> . Type                              (rule 2)

	'('            shift, and enter state 16
	'tbot'         shift, and enter state 17
	'ttop'         shift, and enter state 18
	L_DynVar       shift, and enter state 19

	DynVar         goto state 11
	Type           goto state 12
	Type1          goto state 13
	Type2          goto state 14
	Type3          goto state 15

State 3

	%start_pSCond -> . SCond                            (rule 3)

	'SC'           shift, and enter state 7
	'VSC'          shift, and enter state 8
	'fresh'        shift, and enter state 9
	'none'         shift, and enter state 10

	SCond          goto state 6

State 4

	Integer -> . L_integ                                (rule 4)

	L_integ        shift, and enter state 5


State 5

	Integer -> L_integ .                                (rule 4)

	'!='           reduce using rule 4
	')'            reduce using rule 4
	'*'            reduce using rule 4
	'+'            reduce using rule 4
	'++'           reduce using rule 4
	','            reduce using rule 4
	'-'            reduce using rule 4
	'.'            reduce using rule 4
	'/'            reduce using rule 4
	'/\\'          reduce using rule 4
	':'            reduce using rule 4
	'<'            reduce using rule 4
	'<='           reduce using rule 4
	'=='           reduce using rule 4
	'==='          reduce using rule 4
	'==>'          reduce using rule 4
	'>'            reduce using rule 4
	'>='           reduce using rule 4
	'[.'           reduce using rule 4
	'\\/'          reduce using rule 4
	'div'          reduce using rule 4
	'mod'          reduce using rule 4
	%eof           reduce using rule 4


State 6

	%start_pSCond -> SCond .                            (rule 3)

	%eof           accept


State 7

	SCond -> 'SC' . ListVSCond '.' VarSet '.'           (rule 96)

	'.'            reduce using rule 93
	'lst'          shift, and enter state 79
	'std'          shift, and enter state 80

	GVar           goto state 81
	VSCond         goto state 82
	ListVSCond     goto state 84

State 8

	SCond -> 'VSC' . ListVSCond '.'                     (rule 97)

	'.'            reduce using rule 93
	'lst'          shift, and enter state 79
	'std'          shift, and enter state 80

	GVar           goto state 81
	VSCond         goto state 82
	ListVSCond     goto state 83

State 9

	SCond -> 'fresh' . VarSet '.'                       (rule 98)

	'.'            reduce using rule 86
	'lst'          shift, and enter state 79
	'std'          shift, and enter state 80

	GVar           goto state 76
	ListGVar       goto state 77
	VarSet         goto state 78

State 10

	SCond -> 'none' .                                   (rule 99)

	'Conjecture'   reduce using rule 99
	'DclASet'      reduce using rule 99
	'DclDLVar'     reduce using rule 99
	'DclVar'       reduce using rule 99
	'Law'          reduce using rule 99
	%eof           reduce using rule 99


State 11

	Type1 -> DynVar . '(:' ListType2 ':)'               (rule 71)
	Type2 -> DynVar . ListType3                         (rule 73)
	Type3 -> DynVar .                                   (rule 76)

	'('            shift, and enter state 16
	'(:'           shift, and enter state 75
	')'            reduce using rule 82
			(reduce using rule 76)

	'->'           reduce using rule 82
			(reduce using rule 76)

	'.'            reduce using rule 82
			(reduce using rule 76)

	'tbot'         shift, and enter state 17
	'ttop'         shift, and enter state 18
	L_DynVar       shift, and enter state 19
	%eof           reduce using rule 82
			(reduce using rule 76)


	DynVar         goto state 72
	Type3          goto state 73
	ListType3      goto state 74

State 12

	%start_pType -> Type .                              (rule 2)

	%eof           accept


State 13

	Type -> Type1 . '->' Type                           (rule 69)
	Type -> Type1 .                                     (rule 70)

	')'            reduce using rule 70
	'->'           shift, and enter state 71
	'.'            reduce using rule 70
	%eof           reduce using rule 70


State 14

	Type1 -> Type2 .                                    (rule 72)

	')'            reduce using rule 72
	'->'           reduce using rule 72
	'.'            reduce using rule 72
	%eof           reduce using rule 72


State 15

	Type2 -> Type3 .                                    (rule 74)

	')'            reduce using rule 74
	'->'           reduce using rule 74
	'.'            reduce using rule 74
	':)'           reduce using rule 74
	'|'            reduce using rule 74
	%eof           reduce using rule 74


State 16

	Type3 -> '(' . Type ')'                             (rule 78)

	'('            shift, and enter state 16
	'tbot'         shift, and enter state 17
	'ttop'         shift, and enter state 18
	L_DynVar       shift, and enter state 19

	DynVar         goto state 11
	Type           goto state 70
	Type1          goto state 13
	Type2          goto state 14
	Type3          goto state 15

State 17

	Type3 -> 'tbot' .                                   (rule 77)

	'('            reduce using rule 77
	')'            reduce using rule 77
	'->'           reduce using rule 77
	'.'            reduce using rule 77
	':)'           reduce using rule 77
	'tbot'         reduce using rule 77
	'ttop'         reduce using rule 77
	'|'            reduce using rule 77
	L_DynVar       reduce using rule 77
	%eof           reduce using rule 77


State 18

	Type3 -> 'ttop' .                                   (rule 75)

	'('            reduce using rule 75
	')'            reduce using rule 75
	'->'           reduce using rule 75
	'.'            reduce using rule 75
	':)'           reduce using rule 75
	'tbot'         reduce using rule 75
	'ttop'         reduce using rule 75
	'|'            reduce using rule 75
	L_DynVar       reduce using rule 75
	%eof           reduce using rule 75


State 19

	DynVar -> L_DynVar .                                (rule 5)

	'!='           reduce using rule 5
	'('            reduce using rule 5
	'(:'           reduce using rule 5
	')'            reduce using rule 5
	'*'            reduce using rule 5
	'+'            reduce using rule 5
	'++'           reduce using rule 5
	','            reduce using rule 5
	'-'            reduce using rule 5
	'->'           reduce using rule 5
	'.'            reduce using rule 5
	'.]'           reduce using rule 5
	'/'            reduce using rule 5
	'/\\'          reduce using rule 5
	':'            reduce using rule 5
	':)'           reduce using rule 5
	';'            reduce using rule 5
	'<'            reduce using rule 5
	'<='           reduce using rule 5
	'=='           reduce using rule 5
	'==='          reduce using rule 5
	'==>'          reduce using rule 5
	'>'            reduce using rule 5
	'>='           reduce using rule 5
	'[.'           reduce using rule 5
	'\\/'          reduce using rule 5
	'covby'        reduce using rule 5
	'dcovby'       reduce using rule 5
	'disj'         reduce using rule 5
	'div'          reduce using rule 5
	'mod'          reduce using rule 5
	'tbot'         reduce using rule 5
	'ttop'         reduce using rule 5
	'|'            reduce using rule 5
	L_DynVar       reduce using rule 5
	%eof           reduce using rule 5


State 20

	Term8 -> Integer .                                  (rule 56)

	'!='           reduce using rule 56
	')'            reduce using rule 56
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	'++'           reduce using rule 56
	','            reduce using rule 56
	'-'            reduce using rule 56
	'.'            reduce using rule 56
	'/'            reduce using rule 56
	'/\\'          reduce using rule 56
	':'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'=='           reduce using rule 56
	'==='          reduce using rule 56
	'==>'          reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'[.'           reduce using rule 56
	'\\/'          reduce using rule 56
	'div'          reduce using rule 56
	'mod'          reduce using rule 56
	%eof           reduce using rule 56


State 21

	Term4 -> DynVar .                                   (rule 43)
	Term8 -> DynVar .                                   (rule 57)
	Term8 -> DynVar . '(' ListTerm ')'                  (rule 61)

	'!='           reduce using rule 57
	'('            shift, and enter state 69
	')'            reduce using rule 57
			(reduce using rule 43)

	'*'            reduce using rule 57
	'+'            reduce using rule 57
	'++'           reduce using rule 57
	','            reduce using rule 57
			(reduce using rule 43)

	'-'            reduce using rule 57
	'.'            reduce using rule 57
			(reduce using rule 43)

	'/'            reduce using rule 57
			(reduce using rule 43)

	'/\\'          reduce using rule 57
			(reduce using rule 43)

	':'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'==='          reduce using rule 57
			(reduce using rule 43)

	'==>'          reduce using rule 57
			(reduce using rule 43)

	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'[.'           reduce using rule 57
			(reduce using rule 43)

	'\\/'          reduce using rule 57
			(reduce using rule 43)

	'div'          reduce using rule 57
	'mod'          reduce using rule 57
	%eof           reduce using rule 57
			(reduce using rule 43)



State 22

	%start_pTerm -> Term .                              (rule 1)
	Term -> Term . '===' Term1                          (rule 26)

	'==='          shift, and enter state 68
	%eof           accept


State 23

	Term -> Term1 .                                     (rule 27)

	')'            reduce using rule 27
	','            reduce using rule 27
	'.'            reduce using rule 27
	'/'            reduce using rule 27
	'==='          reduce using rule 27
	'[.'           reduce using rule 27
	%eof           reduce using rule 27


State 24

	Term1 -> Term2 . '==>' Term1                        (rule 28)
	Term1 -> Term2 .                                    (rule 29)
	Term2 -> Term2 . '\\/' Term3                        (rule 30)

	')'            reduce using rule 29
	','            reduce using rule 29
	'.'            reduce using rule 29
	'/'            reduce using rule 29
	'==='          reduce using rule 29
	'==>'          shift, and enter state 66
	'[.'           reduce using rule 29
	'\\/'          shift, and enter state 67
	%eof           reduce using rule 29


State 25

	Term2 -> Term3 .                                    (rule 31)
	Term3 -> Term3 . '/\\' Term4                        (rule 32)

	')'            reduce using rule 31
	','            reduce using rule 31
	'.'            reduce using rule 31
	'/'            reduce using rule 31
	'/\\'          shift, and enter state 65
	'==='          reduce using rule 31
	'==>'          reduce using rule 31
	'[.'           reduce using rule 31
	'\\/'          reduce using rule 31
	%eof           reduce using rule 31


State 26

	Term3 -> Term4 .                                    (rule 34)

	')'            reduce using rule 34
	','            reduce using rule 34
	'.'            reduce using rule 34
	'/'            reduce using rule 34
	'/\\'          reduce using rule 34
	'==='          reduce using rule 34
	'==>'          reduce using rule 34
	'[.'           reduce using rule 34
	'\\/'          reduce using rule 34
	%eof           reduce using rule 34


State 27

	Term4 -> Term5 . '==' Term5                         (rule 35)
	Term4 -> Term5 . '!=' Term5                         (rule 36)
	Term4 -> Term5 . '<' Term5                          (rule 37)
	Term4 -> Term5 . '<=' Term5                         (rule 38)
	Term4 -> Term5 . '>' Term5                          (rule 39)
	Term4 -> Term5 . '>=' Term5                         (rule 40)
	Term4 -> Term5 .                                    (rule 44)

	'!='           shift, and enter state 59
	')'            reduce using rule 44
	','            reduce using rule 44
	'.'            reduce using rule 44
	'/'            reduce using rule 44
	'/\\'          reduce using rule 44
	'<'            shift, and enter state 60
	'<='           shift, and enter state 61
	'=='           shift, and enter state 62
	'==='          reduce using rule 44
	'==>'          reduce using rule 44
	'>'            shift, and enter state 63
	'>='           shift, and enter state 64
	'[.'           reduce using rule 44
	'\\/'          reduce using rule 44
	%eof           reduce using rule 44


State 28

	Term5 -> Term6 . '++' Term5                         (rule 45)
	Term5 -> Term6 . ':' Term5                          (rule 46)
	Term5 -> Term6 .                                    (rule 47)
	Term6 -> Term6 . '+' Term7                          (rule 48)
	Term6 -> Term6 . '-' Term7                          (rule 49)

	'!='           reduce using rule 47
	')'            reduce using rule 47
	'+'            shift, and enter state 55
	'++'           shift, and enter state 56
	','            reduce using rule 47
	'-'            shift, and enter state 57
	'.'            reduce using rule 47
	'/'            reduce using rule 47
	'/\\'          reduce using rule 47
	':'            shift, and enter state 58
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'=='           reduce using rule 47
	'==='          reduce using rule 47
	'==>'          reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'[.'           reduce using rule 47
	'\\/'          reduce using rule 47
	%eof           reduce using rule 47


State 29

	Term6 -> Term7 .                                    (rule 50)
	Term7 -> Term7 . '*' Term8                          (rule 51)
	Term7 -> Term7 . 'div' Term8                        (rule 52)
	Term7 -> Term7 . 'mod' Term8                        (rule 53)

	'!='           reduce using rule 50
	')'            reduce using rule 50
	'*'            shift, and enter state 52
	'+'            reduce using rule 50
	'++'           reduce using rule 50
	','            reduce using rule 50
	'-'            reduce using rule 50
	'.'            reduce using rule 50
	'/'            reduce using rule 50
	'/\\'          reduce using rule 50
	':'            reduce using rule 50
	'<'            reduce using rule 50
	'<='           reduce using rule 50
	'=='           reduce using rule 50
	'==='          reduce using rule 50
	'==>'          reduce using rule 50
	'>'            reduce using rule 50
	'>='           reduce using rule 50
	'[.'           reduce using rule 50
	'\\/'          reduce using rule 50
	'div'          shift, and enter state 53
	'mod'          shift, and enter state 54
	%eof           reduce using rule 50


State 30

	Term7 -> Term8 .                                    (rule 55)

	'!='           reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	'++'           reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'.'            reduce using rule 55
	'/'            reduce using rule 55
	'/\\'          reduce using rule 55
	':'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'==='          reduce using rule 55
	'==>'          reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	'[.'           reduce using rule 55
	'\\/'          reduce using rule 55
	'div'          reduce using rule 55
	'mod'          reduce using rule 55
	%eof           reduce using rule 55


State 31

	Term8 -> '(' . Term ')'                             (rule 65)

	'('            shift, and enter state 31
	'False'        shift, and enter state 32
	'Sub'          shift, and enter state 33
	'SubL'         shift, and enter state 34
	'SubV'         shift, and enter state 35
	'True'         shift, and enter state 36
	'false'        shift, and enter state 37
	'neg'          shift, and enter state 38
	'nil'          shift, and enter state 39
	'true'         shift, and enter state 40
	'~'            shift, and enter state 41
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 19

	Integer        goto state 20
	DynVar         goto state 21
	Term           goto state 51
	Term1          goto state 23
	Term2          goto state 24
	Term3          goto state 25
	Term4          goto state 26
	Term5          goto state 27
	Term6          goto state 28
	Term7          goto state 29
	Term8          goto state 30

State 32

	Term4 -> 'False' .                                  (rule 42)

	')'            reduce using rule 42
	','            reduce using rule 42
	'.'            reduce using rule 42
	'/'            reduce using rule 42
	'/\\'          reduce using rule 42
	'==='          reduce using rule 42
	'==>'          reduce using rule 42
	'[.'           reduce using rule 42
	'\\/'          reduce using rule 42
	%eof           reduce using rule 42


State 33

	Term8 -> 'Sub' . Term '[.' ListTerm '/' ListDynVar '|' ListDynVar '/' ListDynVar '.]'    (rule 64)

	'('            shift, and enter state 31
	'False'        shift, and enter state 32
	'Sub'          shift, and enter state 33
	'SubL'         shift, and enter state 34
	'SubV'         shift, and enter state 35
	'True'         shift, and enter state 36
	'false'        shift, and enter state 37
	'neg'          shift, and enter state 38
	'nil'          shift, and enter state 39
	'true'         shift, and enter state 40
	'~'            shift, and enter state 41
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 19

	Integer        goto state 20
	DynVar         goto state 21
	Term           goto state 50
	Term1          goto state 23
	Term2          goto state 24
	Term3          goto state 25
	Term4          goto state 26
	Term5          goto state 27
	Term6          goto state 28
	Term7          goto state 29
	Term8          goto state 30

State 34

	Term8 -> 'SubL' . Term '[.' ListDynVar '/' ListDynVar '.]'    (rule 63)

	'('            shift, and enter state 31
	'False'        shift, and enter state 32
	'Sub'          shift, and enter state 33
	'SubL'         shift, and enter state 34
	'SubV'         shift, and enter state 35
	'True'         shift, and enter state 36
	'false'        shift, and enter state 37
	'neg'          shift, and enter state 38
	'nil'          shift, and enter state 39
	'true'         shift, and enter state 40
	'~'            shift, and enter state 41
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 19

	Integer        goto state 20
	DynVar         goto state 21
	Term           goto state 49
	Term1          goto state 23
	Term2          goto state 24
	Term3          goto state 25
	Term4          goto state 26
	Term5          goto state 27
	Term6          goto state 28
	Term7          goto state 29
	Term8          goto state 30

State 35

	Term8 -> 'SubV' . Term '[.' ListTerm '/' ListDynVar '.]'    (rule 62)

	'('            shift, and enter state 31
	'False'        shift, and enter state 32
	'Sub'          shift, and enter state 33
	'SubL'         shift, and enter state 34
	'SubV'         shift, and enter state 35
	'True'         shift, and enter state 36
	'false'        shift, and enter state 37
	'neg'          shift, and enter state 38
	'nil'          shift, and enter state 39
	'true'         shift, and enter state 40
	'~'            shift, and enter state 41
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 19

	Integer        goto state 20
	DynVar         goto state 21
	Term           goto state 48
	Term1          goto state 23
	Term2          goto state 24
	Term3          goto state 25
	Term4          goto state 26
	Term5          goto state 27
	Term6          goto state 28
	Term7          goto state 29
	Term8          goto state 30

State 36

	Term4 -> 'True' .                                   (rule 41)

	')'            reduce using rule 41
	','            reduce using rule 41
	'.'            reduce using rule 41
	'/'            reduce using rule 41
	'/\\'          reduce using rule 41
	'==='          reduce using rule 41
	'==>'          reduce using rule 41
	'[.'           reduce using rule 41
	'\\/'          reduce using rule 41
	%eof           reduce using rule 41


State 37

	Term8 -> 'false' .                                  (rule 59)

	'!='           reduce using rule 59
	')'            reduce using rule 59
	'*'            reduce using rule 59
	'+'            reduce using rule 59
	'++'           reduce using rule 59
	','            reduce using rule 59
	'-'            reduce using rule 59
	'.'            reduce using rule 59
	'/'            reduce using rule 59
	'/\\'          reduce using rule 59
	':'            reduce using rule 59
	'<'            reduce using rule 59
	'<='           reduce using rule 59
	'=='           reduce using rule 59
	'==='          reduce using rule 59
	'==>'          reduce using rule 59
	'>'            reduce using rule 59
	'>='           reduce using rule 59
	'[.'           reduce using rule 59
	'\\/'          reduce using rule 59
	'div'          reduce using rule 59
	'mod'          reduce using rule 59
	%eof           reduce using rule 59


State 38

	Term7 -> 'neg' . Term8                              (rule 54)

	'('            shift, and enter state 31
	'Sub'          shift, and enter state 33
	'SubL'         shift, and enter state 34
	'SubV'         shift, and enter state 35
	'false'        shift, and enter state 37
	'nil'          shift, and enter state 39
	'true'         shift, and enter state 40
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 19

	Integer        goto state 20
	DynVar         goto state 46
	Term8          goto state 47

State 39

	Term8 -> 'nil' .                                    (rule 60)

	'!='           reduce using rule 60
	')'            reduce using rule 60
	'*'            reduce using rule 60
	'+'            reduce using rule 60
	'++'           reduce using rule 60
	','            reduce using rule 60
	'-'            reduce using rule 60
	'.'            reduce using rule 60
	'/'            reduce using rule 60
	'/\\'          reduce using rule 60
	':'            reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'=='           reduce using rule 60
	'==='          reduce using rule 60
	'==>'          reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	'[.'           reduce using rule 60
	'\\/'          reduce using rule 60
	'div'          reduce using rule 60
	'mod'          reduce using rule 60
	%eof           reduce using rule 60


State 40

	Term8 -> 'true' .                                   (rule 58)

	'!='           reduce using rule 58
	')'            reduce using rule 58
	'*'            reduce using rule 58
	'+'            reduce using rule 58
	'++'           reduce using rule 58
	','            reduce using rule 58
	'-'            reduce using rule 58
	'.'            reduce using rule 58
	'/'            reduce using rule 58
	'/\\'          reduce using rule 58
	':'            reduce using rule 58
	'<'            reduce using rule 58
	'<='           reduce using rule 58
	'=='           reduce using rule 58
	'==='          reduce using rule 58
	'==>'          reduce using rule 58
	'>'            reduce using rule 58
	'>='           reduce using rule 58
	'[.'           reduce using rule 58
	'\\/'          reduce using rule 58
	'div'          reduce using rule 58
	'mod'          reduce using rule 58
	%eof           reduce using rule 58


State 41

	Term3 -> '~' . Term4                                (rule 33)

	'('            shift, and enter state 31
	'False'        shift, and enter state 32
	'Sub'          shift, and enter state 33
	'SubL'         shift, and enter state 34
	'SubV'         shift, and enter state 35
	'True'         shift, and enter state 36
	'false'        shift, and enter state 37
	'neg'          shift, and enter state 38
	'nil'          shift, and enter state 39
	'true'         shift, and enter state 40
	L_integ        shift, and enter state 5
	L_DynVar       shift, and enter state 19

	Integer        goto state 20
	DynVar         goto state 21
	Term4          goto state 45
	Term5          goto state 27
	Term6          goto state 28
	Term7          goto state 29
	Term8          goto state 30

State 42

	%start_pTheory -> Theory .                          (rule 0)

	%eof           accept


State 43

	Theory -> 'Theory' . DynVar '.' ListDynVar '.' ListItem    (rule 6)

	L_DynVar       shift, and enter state 19

	DynVar         goto state 44

State 44

	Theory -> 'Theory' DynVar . '.' ListDynVar '.' ListItem    (rule 6)

	'.'            shift, and enter state 124


State 45

	Term3 -> '~' Term4 .                                (rule 33)

	')'            reduce using rule 33
	','            reduce using rule 33
	'.'            reduce using rule 33
	'/'            reduce using rule 33
	'/\\'          reduce using rule 33
	'==='          reduce using rule 33
	'==>'          reduce using rule 33
	'[.'           reduce using rule 33
	'\\/'          reduce using rule 33
	%eof           reduce using rule 33


State 46
